fix invisible nav bar bug

--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,7 @@ body {
   height: 100vh;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -50rem;
   z-index: 1500;
   opacity: 0;
   width: 0;
@@ -606,7 +606,8 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  width: 100%;
+  left: 0; }
 
 .navigation__icon {
   position: relative;
