--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -36,7 +36,7 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -50rem;
     z-index: 1500;
 
     opacity: 0;
@@ -95,6 +95,7 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+    left: 0;
   }
 
   // Icon
